<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".FormularioActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@string/fontTittle"
        android:text="@string/formularioTittle"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="479dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.1">

        <Button
            android:id="@+id/btnDosJugadores"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#939292"
            android:drawableRight="@drawable/logo_cantidad_jugadores"
            android:text="@string/dosJugadores" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="43dp"
            android:layout_height="49dp">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnCuatroJugadores"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#FF939292"
            android:drawableRight="@drawable/logo_cantidad_jugadores"
            android:text="@string/cuatroJugadores" />
    </LinearLayout>

    <Button
        android:id="@+id/btnTresJugadores"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FF939292"
        android:drawableRight="@drawable/logo_cantidad_jugadores"
        android:text="3 Jugadores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.016" />

</androidx.constraintlayout.widget.ConstraintLayout>